WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294028
Address unchecked variable CPP warnings in WebResourceLoadStatisticsStore
https://bugs.webkit.org/show_bug.cgi?id=294028
Summary
Address unchecked variable CPP warnings in WebResourceLoadStatisticsStore
Claudio Saavedra
Reported
2025-06-04 08:46:04 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2025-06-04 08:46:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46326
EWS
Comment 2
2025-06-05 05:53:33 PDT
Committed
295870@main
(62158fd73c37): <
https://commits.webkit.org/295870@main
> Reviewed commits have been landed. Closing PR #46326 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-06-05 05:55:40 PDT
<
rdar://problem/152647430
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug